--- a/projekt/styl.css
+++ b/projekt/styl.css
@@ -1,5 +1,5 @@
 ﻿body {
-    background-color: #fcfcfc;
+    background-color: white;
     background-attachment: relative;
     width: auto;
     height: auto;
