--- a/projekt/styl.css
+++ b/projekt/styl.css
@@ -13,6 +13,7 @@
 DIV {
     margin: 4px;
     padding: 2px;
+    
 }
 
 .hlavna {
@@ -21,6 +22,7 @@ DIV {
     height: auto;
     border: 4px DOTTED;
     margin: 2px;
+    background-color:white;
 }
 
 .menu A, A:link, A:visited {
