--- a/projekt/styl.css
+++ b/projekt/styl.css
@@ -17,6 +17,8 @@ DIV {
 }
 .uvod {
     background-color:pink;
+    width:100px;
+    height: 100px;
 }
 .hlavna {
     font-family: Times New Roman;
