--- a/projekt/css/style.css
+++ b/projekt/css/style.css
@@ -2,14 +2,12 @@
 body {
     background-color: ghostwhite;
     background-attachment: relative;
-    width: auto;
-    height: auto;
+    width: md;
+    height: md;
     background-position: 0% 0%;
     font-size: 30px;
     font-family: "Times New Roman";
     text-align: justify;
- 
-
 }
 
 
@@ -20,13 +18,13 @@ body {
     text-decoration: NONE;
     padding: 0px;
     text-align: center;
-    width: 1500px;
-    height: 60px;
+    height: md;
     border-radius: 5px;
     margin-top: 0px;
     margin-bottom: 1px;
     margin-right: 10px;
     margin-left: 10px;
+    width: md;
 }
 
 
@@ -46,8 +44,8 @@ footer {
 
 .hlavna {
     font-family: Times New Roman;
-    width: 1500px;
-    height: auto;
+    width: md;
+    height: md;
     border: 4px groove;
     padding-top: 50px;
     padding-right: 10px;
