--- a/projekt/css/style.css
+++ b/projekt/css/style.css
@@ -55,9 +55,12 @@ footer {
     margin-bottom: 10px;
     margin-right: 10px;
     margin-left: 10px;
+    border-radius: 5px;
 }
 
-
+.table-bordered {
+    border-radius: 20px;
+}
 
 
 
