--- a/projekt/css/style.css
+++ b/projekt/css/style.css
@@ -1,14 +1,25 @@
 ﻿
 body {
-    background-color: ghostwhite;
     background-attachment: relative;
     width: md;
     height: md;
-    background-position: 0% 0%;
+    background-position: 10% 10%;
     font-size: 30px;
     font-family: "Times New Roman";
     text-align: justify;
+    background: url(titul.jpg);
+    background-attachment: fixed;
+    background-repeat: repeat;
+    padding-top: 50px;
+    padding-right: 40px;
+    padding-bottom: 50px;
+    padding-left: 40px;
+    margin-bottom: 20px;
+    margin-right: 10px;
+    margin-left: 10px;
+    
 }
+
 
 
 .nav-fill {
@@ -24,7 +35,7 @@ body {
     margin-bottom: 1px;
     margin-right: 10px;
     margin-left: 10px;
-    width: md;
+    width:1300px - md;
 }
 
 
@@ -44,8 +55,8 @@ footer {
 
 .hlavna {
     font-family: Times New Roman;
-    width: md;
-    height: md;
+    width: 1300px - md;
+    height:  auto - md;
     border: 4px groove;
     padding-top: 50px;
     padding-right: 10px;
@@ -56,6 +67,7 @@ footer {
     margin-right: 10px;
     margin-left: 10px;
     border-radius: 5px;
+    background-color: white;
 }
 
 .table-bordered {
